# dpsim-api

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  crates.js  curl.sh  help.html  openapi.json  search-index.js  settings.html  source-files.js
.github/workflows/: build_container.yml  build_docs.yml  build_test.yml
docs/: index.html  search-index.js  settings.html  source-files.js
docs/dpsim_api/: all.html  enum.SimulationType.html  fn.get_simulation.html  fn.incomplete_form.html  fn.main.html  fn.osstr_to_string.html  fn.parse_simulation_form.html  fn.post_simulation.html  fn.read_u64.html  fn.read_zip.html  fn.write_u64.html  index.html  sidebar-items.js  struct.Simulation.html  struct.SimulationForm.html  type.SimulationJson.html
dpsim_api/: all.html  enum.SimulationType.html  fn.get_docs.html  fn.main.html  fn.osstr_to_string.html  fn.parse_simulation_form.html  fn.read_zip.html  index.html  sidebar-items.js  struct.Simulation.html  struct.SimulationForm.html  type.SimulationJson.html
dpsim_api/amqp/: fn.publish.html  fn.request_simulation.html  index.html  sidebar-items.js  struct.AMQPSimulation.html
dpsim_api/db/: fn.get_connection.html  fn.get_new_simulation_id.html  fn.get_number_of_simulations.html  fn.read_simulation.html  fn.read_string.html  fn.read_u64.html  fn.write_simulation.html  fn.write_string.html  fn.write_u64.html  index.html  sidebar-items.js
dpsim_api/file_service/: fn.convert_id_to_url.html  fn.create_results_file.html  fn.get_data_from_url.html  fn.post_results_file.html  index.html  sidebar-items.js
dpsim_api/routes/: enum.DomainType.html  enum.SimulationType.html  enum.SolverType.html  fn.document_link.html  fn.document_link_page.html  fn.error_simulation.html  fn.get_api.html  fn.get_root.html  (+33 more)
helm/: Chart.yaml  values.yaml
scripts/: build_docker.sh  generate_openapi.sh  shell_node.sh
src/: amqp.rs  db.rs  file_service.rs  main.rs  routes.rs  tests.rs
templates/: api.html.hbs  doc_link.html.hbs
testdata/: file_service_test.json
(+39 files in other folders)
