[package]
name = "dpsim-api"
authors = ["Richard Marston <rmarston@eonerc.rwth-aachen.de>"]
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev", features = [ "json" ] }
serde = { version = "^1", features = ["derive"] }
redis = "0.20.1"
log = "0.4.14"
doc-comment = "0.3.3"
bytes = "1.0.1"
serde_json = "1.0.64"
zip = "0.5.12"
assert-json-diff = "2.0.1"
lapin = "1.7.1"
async-global-executor = "2.0.2"
