[package]
name = "dpsim-api"
authors = ["Richard Marston <rmarston@eonerc.rwth-aachen.de>"]
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = [ "json" ] }
serde = { version = "^1", features = ["derive"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
redis = "0.20.1"
log = "0.4.14"
doc-comment = "0.3.3"
bytes = "1.0.1"
serde_json = "1.0.64"
zip = "0.5.12"
assert-json-diff = "2.0.1"
lapin = "1.7.1"
async-global-executor = "2.0.2"
handlebars = "4.0.1"
paste = "1.0.5"
